--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   # Use for custom toast with Status, ex : Loading,Success,Failed
   oktoast: ^3.1.5
 
+  # Use as default SVG image loader, prefer use SVG as image asset
+  flutter_svg: ^1.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
