--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: the_klink_sehat
+name: valbury
 description: A technical test for flutter dev at Entrust
 
 # The following line prevents the package from being accidentally published to
