--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fi.the_klink_sehat">
+    package="com.fi.valbury">
    <application
-        android:label="The Klinik Sehat"
+        android:label="Valbury"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
